--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -38,4 +38,5 @@ security:
 
     access_control:
         - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register/*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/states, role: ROLE_USER }
