--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^3.0.0",
     "@material-ui/icons": "^3.0.0",
+    "axios": "^0.18.0",
+    "moment": "^2.22.2",
     "prop-types": "^15.5.10",
     "react": "^16.0.0",
+    "react-datetime": "^2.15.0",
     "react-dom": "^16.0.0",
     "react-intl": "^2.4.0",
     "react-redux": "^5.0.6",
